RESOLVED FIXED305220
Fix outstanding smart pointer warnings
https://bugs.webkit.org/show_bug.cgi?id=305220
Summary Fix outstanding smart pointer warnings
Ryosuke Niwa
Reported 2026-01-09 13:32:08 PST
Fix outstanding smart pointer static analyzer warnings.
Attachments
Ryosuke Niwa
Comment 1 2026-01-09 13:34:14 PST
EWS
Comment 2 2026-01-09 14:19:03 PST
Committed 305379@main (6a25e9bef423): <https://commits.webkit.org/305379@main> Reviewed commits have been landed. Closing PR #56357 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-09 14:20:13 PST
Note You need to log in before you can comment on or make changes to this bug.