Fix outstanding smart pointer warnings https://bugs.webkit.org/show_bug.cgi?id=305220

Reviewed by Geoffrey Garen.

Fix the outstanding unexpected smart pointer clang static analyzer warnings.

No new tests since there should be no behavioral changes.

* Source/WebCore/bindings/js/JSFontFaceSetLoadEventCustom.cpp:
(WebCore::JSFontFaceSetLoadEvent::visitAdditionalChildren):
* Source/WebCore/inspector/PageInspectorController.cpp:
(WebCore::PageInspectorController::evaluateForTestInFrontend):
* Source/WebCore/page/PageOverlayController.cpp:
(WebCore::PageOverlayController::installedPageOverlaysChanged):
(WebCore::PageOverlayController::installPageOverlay):
* Source/WebCore/rendering/style/StyleFilterImage.cpp:
(WebCore::StyleFilterImage::image const):
* Source/WebKitLegacy/Storage/StorageAreaSync.h:

Canonical link: https://commits.webkit.org/305379@main